--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
-<body>
-<head>
-<title> Huh </title>
-</head>
+  <head>
+   <title> Huh </title>
+  </head>
+  <body>
 <h1> hmm </h1>
-
-<p> sus </p>
-
-</body>
+<p1> sus </p1>
+  </body>
 </html>
