--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
    <title> Huh </title>
+   <style>
+    p {
+      background-image:
+    url('backgroundimg.jpg');
+    }
+   </style>
   </head>
   <body>
 <h1> hmm </h1>
