--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <style>
     p {
       background-image:
-    url('backgroundimg.jpg');
+    url('backgroundimg.jpeg');
     }
    </style>
   </head>
