--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
       background-image:
     url('backgroundimg.jpeg');
     }
+    code {
+    border: 1px solid #d0d0d0;
+    background-color: #f0f0f0;
+    padding: 2px 4px;
+    border-radius: 3px;
+    }
+
    </style>
   </head>
   <body>
