--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     }
     code {
     border: 1px solid #d0d0d0;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     padding: 2px 4px;
     border-radius: 3px;
     }
