--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     body {
       background-image:
     url('backgroundimg.jpeg');
+    font-family: Arial;
+    line-height: 1.5em;
+    max-width: 768px;
+    margin: 0px auto;
+    padding: 64px;
     }
     code {
     border: 1px solid #d0d0d0;
