--- a/index.html
+++ b/index.html
@@ -5,21 +5,11 @@
     body {
       background-image:
     url('backgroundimg.jpeg');
-    font-family: Arial;
-    line-height: 1.5em;
-    max-width: 768px;
-    margin: 0px auto;
-    padding: 64px;
-    }
-    code {
-    padding: 2px 4px;
-    border-radius: 3px;
-    }
-
+    } 
    </style>
   </head>
   <body>
-<h1 style="color:red"> hmm </h1>
+<h1 style="color:red", "text-align:center"> LYTRA NETWORK </h1>
 <p1> sus </p1>
   </body>
 </html>
