--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       background-image:
     url('backgroundimg.jpeg');
     } 
+    .heading {
+      text-align: center;
+      color: red;
+    }
    </style>
   </head>
   <body>
