--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
       background-image:
     url('backgroundimg.jpeg');
     } 
-    .heading {
+    .heading1 {
       text-align: center;
       color: red;
     }
    </style>
   </head>
   <body>
-<h1 style="color:red", "text-align:center"> LYTRA NETWORK </h1>
+<h1 class="heading1"> LYTRA NETWORK </h1>
 <p1> sus </p1>
   </body>
 </html>
