--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-   <title> Huh </title>
+   <title> Lytra Network Official Website </title>
    <style>
     body {
       background-image:
@@ -14,6 +14,11 @@
   </head>
   <body>
 <h1 class="heading1"> LYTRA NETWORK </h1>
-<p1> sus </p1>
+<p1> Lytra Network is an MCPE Server </p1>
+<p2> For Now Lytra Network Only Had 1 Gamemodes </p2>
+<p3> Its Kingdom RPG </p3>
+<p4> So basically You can create your own kingdom, You can grinding too for upgrading your statistics </p4>
+<p5> Can We declaring war ? Yes Of Course </p5>
+<p6> What you're waiting for ? Join Now ! </p6>
   </body>
 </html>
