--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <style>
     body {
       background-image:
-    url('backgroundimg.jpeg');
+    url('backgroundimg.jpg');
     } 
     .heading1 {
       text-align: center;
