--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     body {
       background-image:
     url('backgroundimg.jpg');
+      background-repeat: no-repeat;
     } 
     .heading1 {
       text-align: center;
