--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       background-image:
     url('backgroundimg.jpg');
       background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
     } 
     .heading1 {
       text-align: center;
