--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       -webkit-text-stroke-color: yellow;
     }
    </style>
+   <img src="lytra_logo.png" alt="logo" />
   </head>
   <body>
 <h1 class="heading1"> LYTRA NETWORK </h1>
