--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       -webkit-text-stroke-color: yellow;
     }
    </style>
-   <link rel="icon" href="lytra_logo.png">
+   <link rel="icon" href="lytra_logo.png" type="image/x-icon">
   </head>
   <body>
 <h1 class="heading1"> LYTRA NETWORK </h1>
