--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
    <title> Lytra Network Official Website </title>
    <style>
     body {
-      background-image:
-    url('backgroundimg.jpg');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: 100% 100%;
     } 
     .heading1 {
       text-align: center;
@@ -18,10 +13,21 @@
       -webkit-text-stroke-width: 1px;
       -webkit-text-stroke-color: yellow;
     }
+    #backgroundvid {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+    }
    </style>
    <link rel="icon" href="lytra_logo.png">
   </head>
   <body>
+    <video autoplay muted loop id="backgroundvid">
+      <source src="backgroundvid.mp4" type="video/mp4">
+    </video>
+      
 <h1 class="heading1"> LYTRA NETWORK </h1>
 <p1 class="p"> Lytra Network is an MCPE Server </p1>
 <p2 class="p"> For Now Lytra Network Only Had 1 Gamemodes </p2>
