--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       color: black;
       -webkit-text-stroke-width: 1px;
       -webkit-text-stroke-color: yellow;
+      background: rgba(0, 0, 0, 0.5);
+      color: #f1f1f1;
+      width: 100%;
+      padding: 20%;
     }
     #backgroundvid {
       position: fixed;
