--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       width: 100%;
       padding: 20%;
     }
-    #backgroundvid {
+    backgroundvid {
       position: fixed;
       right: 0;
       bottom: 0;
