--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
    <link rel="icon" href="lytra_logo.png">
   </head>
   <body>
-<h1 class="heading1"> LYTRA NETWORK </h1>
-<p1 class="p"> Lytra Network is an MCPE Server </p1>
-<p2 class="p"> For Now Lytra Network Only Had 1 Gamemodes </p2>
-<p3 class="p"> Its Kingdom RPG </p3>
-<p4 class="p"> So basically You can create your own kingdom, You can grinding too for upgrading your statistics </p4>
-<p5 class="p"> Can We declaring war ? Yes Of Course </p5>
-<p6 class="p"> What you're waiting for ? Join Now ! </p6>
+<div class= "p">
+<h1> LYTRA NETWORK </h1>
+<p1> Lytra Network is an MCPE Server </p1>
+<p2> For Now Lytra Network Only Had 1 Gamemodes </p2>
+<p3> Its Kingdom RPG </p3>
+<p4> So basically You can create your own kingdom, You can grinding too for upgrading your statistics </p4>
+<p5> Can We declaring war ? Yes Of Course </p5>
+<p6> What you're waiting for ? Join Now ! </p6>
+</div>
   </body>
 </html>
