--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
   <body>
 <div class= "p">
 <h1> LYTRA NETWORK </h1>
-<p1> Lytra Network is an MCPE Server </p1>
-<p2> For Now Lytra Network Only Had 1 Gamemodes </p2>
-<p3> Its Kingdom RPG </p3>
-<p4> So basically You can create your own kingdom, You can grinding too for upgrading your statistics </p4>
-<p5> Can We declaring war ? Yes Of Course </p5>
-<p6> What you're waiting for ? Join Now ! </p6>
+<p1> Lytra Network is an MCPE Server \nFor Now Lytra Network Only Had 1 Gamemodes \nIts Kingdom RPG \nSo basically You can create your own kingdom, You can grinding too for upgrading your statistics \nCan We declaring war ? Yes Of Course \nWhat you're waiting for ? Join Now ! </p1>
 </div>
   </body>
 </html>
