--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
       color: red;
     }
     .p {
-      color: black;
-      -webkit-text-stroke-width: 1px;
-      -webkit-text-stroke-color: yellow;
+      position: fixed;
+      bottom: 0;
       background: rgba(0, 0, 0, 0.5);
-      color: #f1f1f1;
       width: 100%;
       padding: 20%;
     }
