--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       bottom: 0;
       background: rgba(0, 0, 0, 0.5);
       width: 100%;
-      padding: 20%;
+      padding: 20px;
     }
     backgroundvid {
       position: fixed;
