--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       width: 100%;
       padding: 20px;
     }
-    backgroundvid {
+    #backgroundvid {
       position: fixed;
       right: 0;
       bottom: 0;
-      min-width: 500%;
-      min-height: 500%;
+      min-width: 100%;
+      min-height: 100%;
     }
    </style>
    <link rel="icon" href="lytra_logo.png">
