--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       color: #f1f1f1;
       width: 100%;
       padding: 5px;
+      text-align: center;
     }
     #backgroundvid {
       position: fixed;
@@ -30,9 +31,7 @@
    <link rel="icon" href="lytra_logo.png">
   </head>
   <body>
-<div class= "p">
-<h1> LYTRA NETWORK </h1>
-<p1> Lytra Network is an MCPE Server \nFor Now Lytra Network Only Had 1 Gamemodes \nIts Kingdom RPG \nSo basically You can create your own kingdom, You can grinding too for upgrading your statistics \nCan We declaring war ? Yes Of Course \nWhat you're waiting for ? Join Now ! </p1>
-</div>
+<h1 class="heading1"> LYTRA NETWORK </h1>
+<p1 class="p"> Lytra Network is an MCPE Server \nFor Now Lytra Network Only Had 1 Gamemodes \nIts Kingdom RPG \nSo basically You can create your own kingdom, You can grinding too for upgrading your statistics \nCan We declaring war ? Yes Of Course \nWhat you're waiting for ? Join Now ! </p1>
   </body>
 </html>
