--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     } 
     .heading1 {
       text-align: center;
-      color: red;
+      color: #f1f1f1;
     }
     .p {
       position: fixed;
@@ -17,7 +17,7 @@
       background: rgba(0, 0, 0, 0.5);
       color: #f1f1f1;
       width: 100%;
-      padding: 5px;
+      padding: 100px;
       text-align: center;
     }
     #backgroundvid {
