--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       bottom: 0;
       min-width: 100%;
       min-height: 100%;
+      z-index: -1;
     }
    </style>
    <link rel="icon" href="lytra_logo.png">
