--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     .heading1 {
       text-align: center;
       color: #f1f1f1;
+      font-size: 40px;
     }
     .p {
       position: fixed;
