--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title> Lytra Network Official Website </title>
    <style>
     body {
+      text-align: center;
     } 
     .heading1 {
       text-align: center;
