--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
   </head>
   <body>
 <h1 class="heading1"> LYTRA NETWORK </h1>
-<p1 class="p"> Lytra Network is an MCPE Server \nFor Now Lytra Network Only Had 1 Gamemodes \nIts Kingdom RPG \nSo basically You can create your own kingdom, You can grinding too for upgrading your statistics \nCan We declaring war ? Yes Of Course \nWhat you're waiting for ? Join Now ! </p1>
+<p1 class="p"> Lytra Network is an MCPE Server </p1>
   </body>
 </html>
