--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       color: #f1f1f1;
       width: 100%;
       padding: 100px;
-      text-align: center;
+      display: inline-block;
     }
     #backgroundvid {
       position: fixed;
