--- a/index.html
+++ b/index.html
@@ -13,15 +13,6 @@
       color: #f1f1f1;
       font-size: 40px;
     }
-    .p {
-      position: fixed;
-      bottom: 0;
-      background: rgba(0, 0, 0, 0.5);
-      color: #f1f1f1;
-      width: 100%;
-      padding: 100px;
-      display: inline-block;
-    }
     #backgroundvid {
       position: fixed;
       right: 0;
@@ -35,6 +26,6 @@
   </head>
   <body>
 <h1 class="heading1"> LYTRA NETWORK </h1>
-<p1 class="p"> Lytra Network is an MCPE Server </p1>
+<p1> Lytra Network is an MCPE Server </p1>
   </body>
 </html>
