--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     .heading1 {
       text-align: center;
       color: #f1f1f1;
-      font-size: 40px;
+      font-size: 150px;
+    }
+    .p1 {
+      color: #000000;
+      background-color: #cccccc;
     }
     #backgroundvid {
       position: fixed;
