--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <style>
     body {
       text-align: center;
+      font-family: arial;
+      font-size: 80px;
     } 
     .heading1 {
       text-align: center;
