--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   </head>
   <body>
 <h1 class="heading1"> LYTRA NETWORK </h1>
-<p1> Lytra Network is an MCPE Server </p1>
+<p1 class="p1"> Lytra Network is an MCPE Server </p1>
   </body>
 </html>
