--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     .p1 {
       color: #000000;
       background-color: #cccccc;
+      opacity: .5;
     }
     #backgroundvid {
       position: fixed;
